changed button component

--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -13,14 +13,17 @@
   <!-- toggle -->
   <div class="toggle">
     <div>
-      <app-button [buttonName]="'LOGIN'" [btnType]="'btn-login btn-pressed'"></app-button>
+      <app-button [btnType]="'btn-login btn-pressed'">
+        LOGIN
+      </app-button>
     </div>
     <div>
       <app-button
         [routerLink]="['/signup']"
-        [buttonName]="'SIGN UP'"
         [btnType]="'btn-signup btn-raised'"
-      ></app-button>
+      >
+      SIGN UP
+    </app-button>
     </div>
   </div>
   <!-- signup form -->
@@ -50,9 +53,10 @@
         <div class="btn-primary">
           <app-button
             [routerLink]="['/orders']"
-            [buttonName]="'LOGIN'"
             [btnType]="'btn-primary'"
-          ></app-button>
+          >
+          LOGIN
+        </app-button>
           <!-- [disabled]="!userForm.valid" (click)="loginForm()"-->
         </div>
       </form>
