--- a/frontend/src/app/pages/setting/setting.page.html
+++ b/frontend/src/app/pages/setting/setting.page.html
@@ -29,9 +29,9 @@
     <div class="btn-primary">
       <app-button
         [routerLink]="['/orders']"
-        [buttonName]="SIGNUP"
         [btnType]="primaryBtn"
-      ></app-button>
+      >
+    SIGNUP</app-button>
     </div>
   </form>
 </ion-content> -->
