--- a/frontend/src/app/shared/components/button/button.component.html
+++ b/frontend/src/app/shared/components/button/button.component.html
@@ -2,7 +2,7 @@
   <!-- classes: btn-primary, btn-raised, btn-pressed, btn-login, btn-signup -->
   <button class="btn {{ btnType }}">
     <span>
-      {{ buttonName }}
+      <ng-content></ng-content>
     </span>
   </button>
 </div>
