--- a/frontend/src/app/shared/components/input-row/input-row.component.html
+++ b/frontend/src/app/shared/components/input-row/input-row.component.html
@@ -1,3 +1,6 @@
+<p>
+  <ng-content></ng-content>
+</p>
 <ion-input>
   <!-- for edit button -->
   <!-- <a href="#" style="color: black;">edit</a> -->
