--- a/frontend/src/app/pages/setting/setting.page.scss
+++ b/frontend/src/app/pages/setting/setting.page.scss
@@ -1,10 +1,19 @@
 .body {
-    float: left;
-    margin: 20px 0 0 32px;
-    h2 {
-      color: saddlebrown;
-    }
-    .input-field{
-      float: left;
-    }
+  width: 66vw;
+  float: left;
+  margin: 20px 0 0 32px;
+
+  h2 {
+    color: saddlebrown;
   }
+
+  .input-field {
+    margin: 0 24px;
+    float: left;
+  }
+
+  .input-field:last-of-type{
+    margin: 55px;
+    float: right;
+  }
+}
