--- a/frontend/src/app/shared/components/input-row/input-row.component.html
+++ b/frontend/src/app/shared/components/input-row/input-row.component.html
@@ -1,7 +1,7 @@
 <p>
   <ng-content></ng-content>
 </p>
-<ion-input>
+<ion-input placeholder="{{placeholder}}" >
   <!-- for edit button -->
   <!-- <a href="#" style="color: black;">edit</a> -->
 </ion-input>
