--- a/frontend/src/app/shared/components/input-row/input-row.component.scss
+++ b/frontend/src/app/shared/components/input-row/input-row.component.scss
@@ -4,10 +4,17 @@ ion-input {
 
   --padding-start: 24px;
   font-size: 22px;
-  color: #d1b18b;
+
+  --color: black;
+  // --placeholder-color:#d1b18b;
 
   background: linear-gradient(90deg, #fff2d9 -1.28%, #fff9e4 103.08%);
   box-shadow: inset -7px -5px 8px rgba(255, 255, 255, 0.5),
     inset 5px 5px 16px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
+}
+
+p{
+  margin-bottom: 5px;
+  color: #D1B18B;
 }
