--- a/frontend/src/app/pages/setting/setting.page.html
+++ b/frontend/src/app/pages/setting/setting.page.html
@@ -43,7 +43,7 @@
 
   <div class="body">
     <h2>SETTINGS</h2>
-    <div class="body--form">
+    <div class="form">
       <div  class="input-field">
         <app-input-row [placeholder]="'John Doe'">
           NAME
@@ -65,7 +65,7 @@
         </app-input-row>
       </div>
 
-      <div  class="input-field">
+      <div class="submit-btn">
         <app-button
         [routerLink]="['/setting']"
         [btnType]="'btn-primary btn-raised'"
