--- a/frontend/src/app/shared/components/accordion/accordion-group.component.html
+++ b/frontend/src/app/shared/components/accordion/accordion-group.component.html
@@ -8,6 +8,7 @@
       <div>${{order.earning}}</div>
       <div>${{order.expense}}</div>
       <div>{{order.status}}</div>
+      <!-- <div><img src="../../../../assets/icon/chevron_closed.png"></div> -->
     </div>
 
     <!-- staff page -->
@@ -17,6 +18,8 @@
       <div>${{staff.earned}}</div>
       <div>{{staff.projects}}</div>
       <div>${{staff.toPay}}</div>
+      <!-- <div><img src="../../../../assets/icon/chevron_closed.png"></div> -->
+
     </div>
 
 
