--- a/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.scss
+++ b/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.scss
@@ -38,10 +38,11 @@
   padding-top: 20px;
 
   h1{
-    font-size: 18px
+    font-size: 14px;
+    color: #C7A277;
   }
   
   p{
-    font-size: x-small;
+    font-size: medium;
   }
 }
