--- a/frontend/src/app/shared/components/button/button.component.scss
+++ b/frontend/src/app/shared/components/button/button.component.scss
@@ -21,7 +21,7 @@ button.btn {
   }
 
   &-primary {
-    width: 400px;
+    // width: 400px;
 
     box-shadow: -7px -11px 22px rgba(255, 255, 255, 0.8),
       7px 7px 20px rgba(0, 0, 0, 0.2);
