--- a/frontend/src/app/pages/staff/staff.page.html
+++ b/frontend/src/app/pages/staff/staff.page.html
@@ -6,6 +6,23 @@
   <div class="body">
     <h2>STAFF MEMBERS</h2>
 
+    <div class="add-staff">
+
+      <div class="input-field">
+        <app-input-row [placeholder]="'John Doe'">
+          STAFF NAME
+        </app-input-row>
+      </div>
+      <div class="submit-btn">
+        <app-button
+        [routerLink]="['/staff']"
+        [btnType]="'btn-primary btn-raised'"
+        >
+        ADD STAFF
+      </app-button>
+    </div>
+    </div>
+
     <div class="header">
       <div>MEMBER NAME</div>
       <div>PAID</div>
