updated ADD User service

--- a/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.html
+++ b/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.html
@@ -10,7 +10,7 @@
       <p class="value">30</p>
     </div>
     <div class="key-param">
-      <p class="key">PAID</p>
+      <p class="key">TO BE PAID</p>
       <p class="value">$300</p>
     </div>
     <div class="key-param">
