--- a/frontend/src/app/pages/staff/staff.page.html
+++ b/frontend/src/app/pages/staff/staff.page.html
@@ -34,7 +34,7 @@
     <div class="scroll-box">
       <accordion *ngFor="let staff of staffs">
         <group [staff]="staff">
-          <!-- collapsible -->
+          <!-- collapsible: SUB-CONTENT -->
           <table class="mytable">
             <tr *ngFor="let order of staff.orderDetails">
               <td>{{ order.projectName }}</td>
