--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -22,8 +22,8 @@
         [routerLink]="['/signup']"
         [btnType]="'btn-signup btn-raised'"
       >
-      SIGN UP
-    </app-button>
+        SIGN UP
+      </app-button>
     </div>
   </div>
   <!-- signup form -->
@@ -51,12 +51,9 @@
         </div>
 
         <div class="btn-primary">
-          <app-button
-            [routerLink]="['/orders']"
-            [btnType]="'btn-primary'"
-          >
-          LOGIN
-        </app-button>
+          <app-button [routerLink]="['/projects']" [btnType]="'btn-primary'">
+            LOGIN
+          </app-button>
           <!-- [disabled]="!userForm.valid" (click)="loginForm()"-->
         </div>
       </form>
