--- a/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.html
+++ b/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.html
@@ -6,7 +6,7 @@
 
   <div class="key-params">
     <div class="key-param">
-      <p class="key">ORDERS</p>
+      <p class="key">PROJECTS</p>
       <p class="value">30</p>
     </div>
     <div class="key-param">
@@ -26,7 +26,7 @@
       <p class="value">$280</p>
     </div>
     <div class="key-param">
-      <p class="key">USED</p>
+      <p class="key">PAID</p>
       <p class="value">$200</p>
     </div>
 
@@ -36,6 +36,5 @@
       <p>$50 paid to John on 12-05-2020</p>
       <p>$50 paid to John on 12-05-2020</p>
     </div>
-   
   </div>
 </div>
