manipulated frontend services

--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -50,11 +50,7 @@
         </div>
 
         <div class="btn-primary">
-          <app-button
-            [routerLink]="['/projects']"
-            [btnType]="'btn-primary'"
-            (click)="login()"
-          >
+          <app-button [btnType]="'btn-primary'" (click)="login()">
             LOGIN
           </app-button>
         </div>
