added auth guard

--- a/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.html
+++ b/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.html
@@ -77,7 +77,7 @@
     </ng-template>
 
     <!-- logout icon -->
-    <div (click)="gotofunc('login')">
+    <div (click)="logout()">
       <app-icon-button [class]="raised" [icon]="logoutIcon"></app-icon-button>
     </div>
   </div>
